--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <module>demo-nio</module>
       <module>demo-serialize</module>
     <module>demo-lucene</module>
+    <module>demo-mybatis</module>
+    <module>demo-jdk</module>
   </modules>
 
   <name>demo</name>
@@ -26,6 +28,7 @@
     <tika.version>1.21</tika.version>
 
     <lombok.version>1.18.6</lombok.version>
+    <mybatis.version>3.5.1</mybatis.version>
   </properties>
 
   <dependencyManagement>
@@ -61,6 +64,13 @@
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis</artifactId>
+        <version>${mybatis.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -73,11 +83,6 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
   </dependencies>
   
